# dol

./: .gitignore  AI_POWERED_TOOLS_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  COMPILER-TARGETS.md  CRDT_IMPLEMENTATION_SUMMARY.md  Cargo.toml  DOLCRA.md  KICKOFF.md  M6_IMPLEMENTATION_COMPLETE.md  MACRO_SYSTEM_IMPLEMENTATION.md  PHASE_9_SUMMARY.md  README.md  SEX_DESIGN.md  STORAGE_EVALUATION_COMPLETE.md  SUPPORT.md  TASK-t0.1-DELIVERABLES.md  TASK_41_COMPLETION.md  TASK_T3_4_GDPR_COMPLETION.md  TASK_T4_1_PERFORMANCE_COMPLETE.md  TASK_T4_2_WORKSPACE_COMPLETE.md  TASK_T4_3_DOCUMENTATION_COMPLETE.md  ast.rs  bootstrap.sh  cer  claude-flow-biomimicry.yaml  claude-flow-fix-binary.yaml  claude-flow-parser-dol2.yaml  claude-flow-q2-metaprogramming.yaml  claude-flow-q3-llvm-mcp.yaml  claude-flow-sex-system.yaml  dol-abi-specs.yaml  dol-compiler-imports.yaml  dol-runtime-host.yaml  dol2.0_next_steps.md  dol2.0_roadmap_checkpoint.md  dol2.0_specification_complete.md  dol_2.0_roadmap_checkpoint.md  error.rs  feature-01-26-2026.md  (+11 more)
apps/gen-registry/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
apps/gen-registry/cli/: main.rs
apps/gen-registry/docs/: API.md  ARCHITECTURE.md  USER_GUIDE.md
apps/gen-registry/examples/: p2p_sync.rs  publish.rs  search.rs
apps/gen-registry/schemas/: gen_module.dol  registry_state.dol
apps/gen-registry/src/: error.rs  lib.rs  models.rs  registry.rs  search.rs  sync.rs  version.rs  wasm.rs
apps/gen-registry/tests/: models_tests.rs  registry_tests.rs  search_tests.rs  sync_tests.rs  version_tests.rs  wasm_tests.rs
apps/gen-registry/ui/: app.js  index.html  styles.css
benchmarks/: Cargo.toml  README.md  regression_tests.rs  startup_time.rs  wasm_size.rs
benchmarks/benches/: memory_usage.rs
benchmarks/src/: lib.rs
crates/dol-codegen/: Cargo.toml  README.md
crates/dol-codegen-rust/: Cargo.toml  IMPLEMENTATION.md  README.md  build-wasm.sh
crates/dol-codegen-rust/examples/: chat_message.dol  counter.dol  document.dol
crates/dol-codegen-rust/src/: automerge_backend.rs  lib.rs  migration_codegen.rs  personal_data_codegen.rs  type_mapper.rs  wasm_bindings.rs
crates/dol-codegen-rust/templates/: Cargo.toml.hbs  automerge_gen.rs.hbs  wasm_bindings.rs.hbs
crates/dol-codegen-rust/tests/: automerge_codegen_tests.rs
crates/dol-codegen-wasm/: Cargo.toml  FILES_SUMMARY.md  IMPLEMENTATION.md  PHASE2_COMPLETE.md  README.md
crates/dol-codegen-wasm/src/: lib.rs
crates/dol-codegen-wasm/tests/: TEST_SUMMARY.md  integration_tests.rs  wasm_validation_tests.rs
crates/dol-codegen-wit/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
crates/dol-codegen-wit/examples/: generate_wit.rs
crates/dol-codegen-wit/src/: lib.rs  type_mapper.rs
crates/dol-codegen-wit/tests/: wit_generation_tests.rs
crates/dol-codegen/src/: lib.rs  template_engine.rs  transforms.rs
crates/dol-codegen/templates/: json_schema.hbs  python_module.hbs  rust_module.hbs  typescript_module.hbs  wit_module.hbs
crates/dol-codegen/tests/: integration_tests.rs  targets_tests.rs  template_engine_tests.rs  transforms_tests.rs
crates/dol-exegesis/: Cargo.toml  README.md
crates/dol-exegesis/benches/: exegesis_performance.rs
crates/dol-exegesis/examples/: basic_exegesis.rs  collaborative_editing.rs  version_evolution.rs
crates/dol-exegesis/src/: collaborative.rs  error.rs  lib.rs  manager.rs  model.rs
crates/dol-exegesis/tests/: collaborative_tests.rs  manager_tests.rs
crates/dol-macro/: Cargo.toml  README.md
crates/dol-macro-proc/: Cargo.toml  FIXES_SUMMARY.md  README.md
crates/dol-macro-proc/src/: ast_util.rs  attribute.rs  codegen.rs  derive.rs  error.rs  function.rs  lib.rs
crates/dol-macro/src/: declarative.rs  error.rs  expand.rs  hygiene.rs  lib.rs  pattern.rs  registry.rs  stdlib.rs
crates/dol-macro/tests/: declarative_tests.rs
crates/dol-reflect/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
crates/dol-reflect/examples/: basic_reflection.rs  crdt_analysis.rs  hot_reload.rs
crates/dol-reflect/src/: crdt_introspection.rs  dynamic_load.rs  lib.rs  schema_api.rs
crates/dol-reflect/tests/: crdt_introspection_tests.rs  dynamic_load_tests.rs  schema_api_tests.rs
crates/dol-test/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
crates/dol-test/examples/: chat-message-properties.rs  counter-properties.rs  document-properties.rs
crates/dol-test/src/: generators.rs  harness.rs  lib.rs  properties.rs
crates/dol-test/tests/: convergence_tests.rs
crates/vudo-ai/: Cargo.toml  README.md
crates/vudo-ai/benches/: conflict_resolution_benchmark.rs  embedding_benchmark.rs  inference_benchmark.rs
crates/vudo-ai/src/: conflict_resolution.rs  embedding.rs  error.rs  inference.rs  lib.rs  model_manager.rs  planetserve_integration.rs
crates/vudo-ai/tests/: integration_tests.rs
crates/vudo-credit/: Cargo.toml
crates/vudo-credit/benches/: credit_benchmarks.rs
crates/vudo-credit/examples/: bft_reconciliation.rs  escrow_refresh.rs  overdraft_resolution.rs  simple_payment.rs
crates/vudo-credit/src/: account.rs  bft.rs  error.rs  lib.rs  (+5 more)
crates/vudo-identity/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/vudo-p2p/: Cargo.toml  README.md  WILLOW_IMPLEMENTATION.md
crates/vudo-planetserve/: Cargo.toml  README.md
crates/vudo-privacy/: Cargo.toml  README.md
crates/vudo-state/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  SCHEMA_EVOLUTION_IMPLEMENTATION.md
crates/vudo-storage/: Cargo.toml  README.md
crates/vudo-storage-browser/: Cargo.toml  README.md
crates/vudo-storage-native/: Cargo.toml  README.md
examples/vudo-storage/: Cargo.toml  basic_usage.rs
llvm-backend/: .gitignore  Cargo.toml  INSTALL_LLVM.md  QUICKSTART.md  README.md
prototypes/eg-walker-dol/: Cargo.toml  EVALUATION_SUMMARY.md  PROTOTYPE_NOTE.md  README.md
prototypes/iroh-sync-poc/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md
scheduler_interface/: Cargo.toml
scheduler_interface/src/: bind.rs  error.rs  filter.rs  lib.rs  resources.rs  scheduler.rs  score.rs  select.rs  types.rs
tests/integration/: Cargo.toml  README.md  main.rs
(+842 files in other folders)
