[package]
name = "vudo-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# State engine
vudo-state = { path = "../crates/vudo-state" }
vudo-p2p = { path = "../crates/vudo-p2p" }

# CRDT backend
automerge = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

# Compression (for WASM size benchmarks)
flate2 = "1.0"

# Memory profiling
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"

# Lazy initialization
once_cell = "1.19"

# String interning (for memory benchmarks)
string_cache = "0.8"

# Compact data structures
smallvec = "1.11"
typed-arena = "2.0"

# Test utilities
tempfile = "3.9"

[[bench]]
name = "wasm_size"
harness = false

[[bench]]
name = "memory_usage"
harness = false

[[bench]]
name = "startup_time"
harness = false

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true
codegen-units = 1
strip = true
panic = 'abort'
