[package]
name = "gen-registry"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["Univrs <ardeshir.org@gmail.com>"]
description = "P2P community registry for DOL Gen module definitions with CRDT annotations"
license = "MIT OR Apache-2.0"

[dependencies]
# Local VUDO dependencies
vudo-state = { path = "../../crates/vudo-state" }
vudo-p2p = { path = "../../crates/vudo-p2p" }
vudo-storage = { path = "../../crates/vudo-storage" }
vudo-identity = { path = "../../crates/vudo-identity" }

# CRDT
automerge = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bincode = "1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Crypto
blake3 = "1.5"           # Fast hashing for module IDs
sha2 = "0.10"            # SHA-256 for WASM hashing
ed25519-dalek = { version = "2.1", features = ["serde"] }  # Signatures

# Data structures
dashmap = "6.0"          # Concurrent HashMap
parking_lot = "0.12"     # Fast locks
bytes = "1.5"

# Semver
semver = { version = "1.0", features = ["serde"] }

# HTTP client (for WASM download)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Text search
tantivy = "0.22"         # Full-text search index

# WASM support for browser UI
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Storage",
    "console"
] }
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

# Non-WASM (native CLI)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-util = { version = "0.7", features = ["codec"] }
indicatif = "0.17"       # Progress bars

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.9"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"
proptest = "1.4"
rand = "0.8"

[[bin]]
name = "gen-registry"
path = "cli/main.rs"

[[bin]]
name = "gen-registry-server"
path = "src/bin/server.rs"

[[bench]]
name = "search_performance"
harness = false

[[bench]]
name = "sync_performance"
harness = false

[lib]
name = "gen_registry"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.release-wasm]
inherits = "release"
opt-level = 'z'
panic = 'abort'
