[package]
name = "dol-exegesis"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["Univrs <ardeshir.org@gmail.com>"]
description = "CRDT-backed exegesis preservation for DOL in local-first mode with Peritext rich text editing"
license = "MIT OR Apache-2.0"

[dependencies]
# Local dependencies
vudo-state = { path = "../vudo-state" }
vudo-p2p = { path = "../vudo-p2p" }

# CRDT backend
automerge = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Time handling
chrono = "0.4"

# Concurrency
parking_lot = "0.12"
dashmap = "6.0"

# Async channels
async-trait = "0.1"

[dev-dependencies]
pretty_assertions = "1.4"
tokio-test = "0.4"
tracing-subscriber = "0.3"
tempfile = "3.9"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "exegesis_performance"
harness = false

[lib]
name = "dol_exegesis"
path = "src/lib.rs"
