[package]
name = "dol-macro-proc"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["Univrs <ardeshir.org@gmail.com>"]
description = "Procedural macro system for DOL (Design Ontology Language)"
documentation = "https://docs.rs/dol-macro-proc"
homepage = "https://github.com/univrs/dol"
repository = "https://github.com/univrs/dol"
license = "MIT OR Apache-2.0"
keywords = ["dsl", "macros", "procedural-macros", "codegen", "language"]
categories = ["development-tools", "parser-implementations"]

[lib]
proc-macro = true
name = "dol_macro_proc"
path = "src/lib.rs"

[dependencies]
# Core DOL dependency for AST types
metadol = { package = "dol", path = "../.." }

# Proc-macro infrastructure
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# Error handling
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
trybuild = "1.0"
