[package]
name = "dol-macro"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["Univrs <ardeshir.org@gmail.com>"]
description = "Declarative macro system for DOL (Design Ontology Language)"
documentation = "https://docs.rs/dol-macro"
homepage = "https://github.com/univrs/dol"
repository = "https://github.com/univrs/dol"
license = "MIT OR Apache-2.0"
keywords = ["dsl", "macros", "metaprogramming", "parser", "language"]
categories = ["development-tools", "parser-implementations"]

[lib]
name = "dol_macro"
path = "src/lib.rs"

[dependencies]
# Core DOL dependency for AST types
metadol = { package = "dol", path = "../.." }

# Error handling
thiserror = "1.0"

# Optional: Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
insta = "1.34"

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "metadol/serde"]
