[package]
name = "vudo-credit"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["Univrs <ardeshir.org@gmail.com>"]
description = "Escrow-based mutual credit system for VUDO Runtime with local-first operations and BFT reconciliation"
license = "MIT OR Apache-2.0"

[dependencies]
# Local dependencies
vudo-state = { path = "../vudo-state" }
vudo-identity = { path = "../vudo-identity" }
vudo-p2p = { path = "../vudo-p2p" }

# CRDT backend
automerge = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Concurrency primitives
parking_lot = "0.12"
dashmap = "6.0"

# Logging
tracing = "0.1"

# Cryptography (for BFT signatures)
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4"
tokio-test = "0.4"
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.9"
proptest = "1.4"
rand = "0.8"

[[bench]]
name = "credit_benchmarks"
harness = false

[[example]]
name = "simple_payment"
path = "examples/simple_payment.rs"

[[example]]
name = "escrow_refresh"
path = "examples/escrow_refresh.rs"

[[example]]
name = "bft_reconciliation"
path = "examples/bft_reconciliation.rs"

[[example]]
name = "overdraft_resolution"
path = "examples/overdraft_resolution.rs"

[lib]
name = "vudo_credit"
path = "src/lib.rs"
