[package]
name = "vudo-identity"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["Univrs <ardeshir.org@gmail.com>"]
description = "Decentralized identity system for VUDO Runtime with Peer DIDs, UCANs, and key management"
license = "MIT OR Apache-2.0"

[dependencies]
# Cryptography
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2.0", features = ["serde", "static_secrets"] }
rand = "0.8"

# DID support (using base58 directly instead of multibase/multicodec)
bs58 = "0.5"
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base58 = "0.2"

# Hashing
blake3 = "1.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# JWT encoding/decoding
jsonwebtoken = "9"

# Data structures
parking_lot = "0.12"
dashmap = "6.0"

# Logging
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1.4"
tokio-test = "0.4"
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.9"

[[bench]]
name = "identity_benchmarks"
harness = false

[lib]
name = "vudo_identity"
path = "src/lib.rs"
