[package]
name = "vudo-p2p"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["Univrs <ardeshir.org@gmail.com>"]
description = "Iroh P2P integration layer for VUDO Runtime with peer discovery, connection management, and Automerge sync"
license = "MIT OR Apache-2.0"

[dependencies]
# Local dependencies
vudo-state = { path = "../vudo-state" }

# Iroh P2P networking
iroh = "0.28"
iroh-net = "0.28"
iroh-gossip = "0.28"

# CRDT
automerge = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bincode = "1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Data structures
bytes = "1.5"
parking_lot = "0.12"
lru = "0.12"           # LRU cache for sync state
dashmap = "6.0"        # Concurrent HashMap

# Willow Protocol support (hashing for namespace mapping)
blake3 = "1.5"         # Fast cryptographic hashing
sha2 = "0.10"          # SHA-256 for capability signing
ed25519-dalek = { version = "2.1", features = ["serde"] }  # Cryptographic signatures for capabilities
hex = "0.4"            # Hex encoding for display

# WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Worker", "MessagePort", "WebSocket"] }
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"

[dev-dependencies]
pretty_assertions = "1.4"
tokio-test = "0.4"
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.9"
rand = "0.8"      # For test key generation
chrono = "0.4"    # For timestamp formatting in examples

# Benchmarks commented out - to be implemented
# [[bench]]
# name = "sync_performance"
# harness = false

[lib]
name = "vudo_p2p"
path = "src/lib.rs"
