[package]
name = "vudo-storage-native"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["Univrs <ardeshir.org@gmail.com>"]
description = "Native SQLite storage adapter for VUDO Runtime (Desktop/Mobile/Server)"
license = "MIT OR Apache-2.0"

[dependencies]
vudo-storage = { path = "../vudo-storage" }
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
thiserror = "2.0"
parking_lot = "0.12"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.9"
tokio-test = "0.4"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "sqlite_adapter"
harness = false

[lib]
name = "vudo_storage_native"
path = "src/lib.rs"
