[package]
name = "eg-walker-dol"
version = "0.1.0"
edition = "2021"
publish = false
description = "Evaluation prototype: eg-walker integration for DOL text types"

[dependencies]
# NOTE: diamond-types not included in prototype due to API differences
# This prototype uses a simplified mockup to demonstrate evaluation concepts
# Real integration would use: diamond-types = "1.0"

# Automerge for comparison
automerge = "0.6"

# DOL local state (optional, not used in core prototype)
# vudo-state = { path = "../../crates/vudo-state" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime (for integration tests)
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
# Testing
pretty_assertions = "1.4"
tempfile = "3.9"
tokio-test = "0.4"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

# Property testing
proptest = "1.4"
quickcheck = "1.0"

[[bench]]
name = "text_operations"
harness = false

[[bench]]
name = "merge_performance"
harness = false

[[bench]]
name = "memory_footprint"
harness = false

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
