[package]
name = "iroh-sync-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = "0.28"
automerge = "0.5"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
