[package]
name = "vudo-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# VUDO crates
vudo-state = { path = "../../crates/vudo-state" }
vudo-storage = { path = "../../crates/vudo-storage" }
vudo-p2p = { path = "../../crates/vudo-p2p" }

# Automerge
automerge = "0.6"

# Async runtime
tokio = { version = "1", features = ["full", "test-util"] }
futures = "0.3"

# Hashing for convergence verification
blake3 = "1.5"

# Concurrency
parking_lot = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# Testing utilities
pretty_assertions = "1.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[test]]
name = "integration"
path = "main.rs"
harness = true
