[package]
name = "vudo-runtime-native"
description = "Native runtime library for VUDO Spirits (implements host functions)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
